Fix spacing and inconsistency search and content type

--- a/src/pages/searchCatalogPage/searchCatalogPage.css
+++ b/src/pages/searchCatalogPage/searchCatalogPage.css
@@ -64,6 +64,7 @@
   width: 20%;
   border-left: 1px solid #e0e4e7;
   border-right: 1px solid #e0e4e7;
+  padding: 0 0 80px 0;
 }
 
 .searchContentContainer {
